tests/reference/asr-test_dict11-2ab4e6c.stderr
semantic error: 'dict' key type cannot be float/complex because resolving collisions by exact comparison of float/complex values will result in unexpected behaviours. In addition fuzzy equality checks with a certain tolerance does not follow transitivity with float/complex values.
 --> tests/errors/test_dict11.py:4:8
  |
4 |     d: dict[c64, f32] = {}
  |        ^^^^^^^^^^^^^^ 
